--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
@@ -22,8 +22,8 @@
                     <div class="col-xl-4">
                         <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                             <i class="bi bi-clipboard-data"></i>
-                            <h4>Corporis voluptates officia eiusmod</h4>
-                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                            <h4>Lezzetin kalbinde buluşuyoruz</h4>
+                            <p>Tüm yemeklerimiz usta şeflerin elinden doğal ve katkısız ürünlerle hazırlanır.</p>
                         </div>
                     </div><!-- End Icon Box -->
 
