--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ApiProjeKampi.WebUI
 @using ApiProjeKampi.WebUI.Models
+@using ApiProjeKampi.WebUI.Dtos.TestimonialDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
