--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ApiProjeKampi.WebUI
 @using ApiProjeKampi.WebUI.Models
 @using ApiProjeKampi.WebUI.Dtos.TestimonialDtos
+@using ApiProjeKampi.WebUI.Dtos.EventDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
