--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ApiProjeKampi.WebUI.Models
 @using ApiProjeKampi.WebUI.Dtos.TestimonialDtos
 @using ApiProjeKampi.WebUI.Dtos.EventDtos
+@using ApiProjeKampi.WebUI.Dtos.ChefDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
