--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using ApiProjeKampi.WebUI.Dtos.TestimonialDtos
 @using ApiProjeKampi.WebUI.Dtos.EventDtos
 @using ApiProjeKampi.WebUI.Dtos.ChefDtos
+@using ApiProjeKampi.WebUI.Dtos.CategoryDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
