--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using ApiProjeKampi.WebUI.Dtos.EventDtos
 @using ApiProjeKampi.WebUI.Dtos.ChefDtos
 @using ApiProjeKampi.WebUI.Dtos.CategoryDtos
+@using ApiProjeKampi.WebUI.Dtos.ProductDtos
+@using ApiProjeKampi.WebUI.Dtos.FeatureDtos
+@using ApiProjeKampi.WebUI.Dtos.AboutDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
