--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using ApiProjeKampi.WebUI.Dtos.ProductDtos
 @using ApiProjeKampi.WebUI.Dtos.FeatureDtos
 @using ApiProjeKampi.WebUI.Dtos.AboutDtos
+@using ApiProjeKampi.WebUI.Dtos.WhyChooseYummyDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
