--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -12,6 +12,8 @@
             <li class="dropdown"><a href="/Product/ProductList/" class="nav-link"><i data-feather="package"></i><span>Ürünler</span></a></li>
             <li class="dropdown"><a href="/Feature/FeatureList/" class="nav-link"><i data-feather="cast"></i><span>Öne Çıkan Alan</span></a></li>
             <li class="dropdown"><a href="/About/AboutList/" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda</span></a></li>
+            <li class="dropdown"><a href="/WhyChooseYummy/WhyChooseYummyList/" class="nav-link"><i data-feather="github"></i><span>Neden Yummy</span></a></li>
+            <li class="dropdown"><a href="/Testimonial/TestimonialList/" class="nav-link"><i data-feather="aperture"></i><span>Müşteri Yorumları</span></a></li>
 
         </ul>
     </aside>
