koddaki hatalar düzeltildi ders-44

--- a/ApiProjeKampi.WebUı/Views/Admin/Index.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Admin/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-
 <!-- basic-table.html  21 Nov 2019 03:55:20 GMT -->
 @await Component.InvokeAsync("_HeadAdminLayoutComponentPartial")
 
@@ -16,11 +15,12 @@
             <!-- Main Content -->
             <div class="main-content">
             @RenderBody()
+                @await Component.InvokeAsync("_RightSettingsAdminLayoutComponentPartial")
             </div>
            
             <footer class="main-footer">
                 <div class="footer-left">
-                    <a href="templateshub.net">Templateshub</a></a>
+                    <a href="templateshub.net">Templateshub</a>
                 </div>
                 <div class="footer-right">
                 </div>
@@ -28,15 +28,16 @@
         </div>
     </div>
     <!-- General JS Scripts -->
-    <script src="otika/assets/js/app.min.js"></script>
+    <script src="~/Otika/assets/js/app.min.js"></script>
     <!-- JS Libraies -->
     <!-- Page Specific JS File -->
     <!-- Template JS File -->
-    <script src="otika/assets/js/scripts.js"></script>
+    <script src="~/Otika/assets/js/scripts.js"></script>
     <!-- Custom JS File -->
-    <script src="otika/assets/js/custom.js"></script>
-</body>
+    <script src="~/Otika/assets/js/custom.js"></script>
 
+    @await Component.InvokeAsync("_RightSettingsAdminLayoutComponentPartial")
+</body>
 
 <!-- basic-table.html  21 Nov 2019 03:55:20 GMT -->
 </html>
