--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuViewComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuViewComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ApiProjeKampi.WebApi.Dtos.CategoryDtos.ResultCategoryDto>
+﻿@model List<ApiProjeKampi.WebUı.Dtos.CategoryDtos.ResultCategoryDto>
 
 <!-- Menu Section -->
 <section id="menu" class="menu section">
