--- a/ApiProjeKampi.WebUı/Views/Product/ProductList.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Product/ProductList.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<ResultCategoryDto>
+﻿@model List<ResultProductDto>
 
 @{
-    ViewData["Title"] = "Category List";
+    ViewData["Title"] = "ProductList";
     Layout = "~/Views/Admin/Index.cshtml";
     int count = 0;
 }
@@ -12,14 +12,16 @@
             <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Kategori Listesi</h4>
+                        <h4>Ürün Listesi</h4>
                     </div>
                     <div class="card-body">
                         <table class="table">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">Kategori</th>
+                                    <th scope="col">Ürün Adı</th>
+                                    <th scope="col">Ürün Fiyatı</th>
+                                    <th scope="col">Ürün Kategori</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
                                 </tr>
@@ -30,14 +32,16 @@
                                     count++;
                                     <tr>
                                         <th scope="row">@count</th>
+                                        <td>@item.ProductName</td>
+                                        <td>@item.Price TL</td>
                                         <td>@item.CategoryName</td>
-                                        <td><a href="/category/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
-                                        <td><a href="/category/UpdateCategory/@item.CategoryId" class="btn btn-success">Güncelle</a></td>
+                                        <td><a href="/Product/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
+                                        <td><a href="/Product/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        <a href="/category/CreateCategory" class="btn btn-info">Yeni Kategori Ekle</a>
+                        <a href="/Product/CreateProduct" class="btn btn-info">Yeni Ürün Ekle</a>
                     </div>
                 </div>
             </div>
