--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuCategoryComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuCategoryComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ApiProjeKampi.WebApi.Dtos.CategoryDtos.ResultCategoryDto>
+﻿@model List<ApiProjeKampi.WebUı.Dtos.CategoryDtos.ResultCategoryDto>
 
 <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
 
