--- a/ApiProjeKampi.WebUı/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUı/Views/_ViewImports.cshtml
@@ -2,5 +2,11 @@
 @using ApiProjeKampi.WebUı.Models
 @using ApiProjeKampi.WebApi.Dtos.EventDtos
 @using ApiProjeKampi.WebApi.Dtos.ChefDtos
+@using ApiProjeKampi.WebApi.Dtos.CategoryDtos
+
+
+@using ApiProjeKampi.WebUı.Dtos.CategoryDtos
+@using ApiProjeKampi.WebUı.Dtos.ProductDtos
+@using ApiProjeKampi.WebUı.Dtos.FeatureDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
