--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_ChefDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_ChefDefaultComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultChefDto>
+﻿@model List<ApiProjeKampi.WebApi.Dtos.ChefDtos.ResultChefDto>
 
 <section id="chefs" class="chefs section">
 
