--- a/ApiProjeKampi.WebUı/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUı/Views/_ViewImports.cshtml
@@ -1,12 +1,18 @@
 ﻿@using ApiProjeKampi.WebUı
 @using ApiProjeKampi.WebUı.Models
 @using ApiProjeKampi.WebApi.Dtos.EventDtos
-@using ApiProjeKampi.WebApi.Dtos.ChefDtos
 @using ApiProjeKampi.WebApi.Dtos.CategoryDtos
 
 
 @using ApiProjeKampi.WebUı.Dtos.CategoryDtos
 @using ApiProjeKampi.WebUı.Dtos.ProductDtos
 @using ApiProjeKampi.WebUı.Dtos.FeatureDtos
+@using ApiProjeKampi.WebUı.Dtos.AboutDtos
+@using ApiProjeKampi.WebUı.Dtos.WhyChooseYummyDtos
+@using ApiProjeKampi.WebUı.Dtos.TestimonialDtos
+@using ApiProjeKampi.WebUı.Dtos.YummyEventDtos
+@using ApiProjeKampi.WebUı.Dtos.ChefDtos
+@using ApiProjeKampi.WebUı.Dtos.ReservationDtos
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
