--- a/ApiProjeKampi.WebUı/Views/About/AboutList.cshtml
+++ b/ApiProjeKampi.WebUı/Views/About/AboutList.cshtml
@@ -1,9 +1,10 @@
-﻿@model List<ResultFeatureDto>
+﻿@model List<ResultAboutDto>
+
 @{
-    ViewData["Title"] = "FeatureList";
+    ViewData["Title"] = "AboutList";
     Layout = "~/Views/Admin/Index.cshtml";
-    int count = 0;
 }
+
 
 <section class="section">
     <div class="section-body">
@@ -11,17 +12,13 @@
             <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Öne Çıkan Alan işlemleri</h4>
-                        <br />
-                        <p>Tema bütünlüğünün bozulmaması adına sadece 1 tane eklenebilir.</p>
+                        <h4>Hakkımda Sayfası Listesi</h4>
                     </div>
                     <div class="card-body">
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th scope="col">#</th>
                                     <th scope="col">Başlık</th>
-                                    <th scope="col">Alt Başlık</th>
                                     <th scope="col">Açıklama</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
@@ -30,27 +27,16 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                    count++;
                                     <tr>
-                                        <th scope="row">@count</th>
                                         <td>@item.Title</td>
-                                        <td>@item.SubTitle</td>
                                         <td>@item.Description</td>
-                                        <td><a href="/Feature/DeleteFeature/@item.FeatureId" class="btn btn-danger">Sil</a></td>
-                                        <td><a href="/Feature/UpdateFeature/@item.FeatureId" class="btn btn-success">Güncelle</a></td>
+                                        <td><a href="/About/DeleteAbout/@item.AboutId/" class="btn btn-danger">Sil</a></td>
+                                        <td><a href="/About/UpdateAbout/@item.AboutId/" class="btn btn-success">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        @if (Model.Count == 1)
-                        {
-                            <a href="#" class="btn btn-info" onclick="return false;">Feature Mevcut</a>
-                        }
-                        else
-                        {
-                            <a href="/Feature/CreateFeature/" class="btn btn-info">Yeni Feature Girişi</a>
-                        }
-
+                        <a href="/About/CreateAbout/" class="btn btn-info">Yeni Hakkımda Alanı Girişi</a>
                     </div>
                 </div>
             </div>
