--- a/ApiProjeKampi.WebUı/Views/Chef/ChefList.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Chef/ChefList.cshtml
@@ -1,6 +1,7 @@
-﻿@model List<ResultFeatureDto>
+﻿@model List<ResultChefDto>
+
 @{
-    ViewData["Title"] = "FeatureList";
+    ViewData["Title"] = "ChefList";
     Layout = "~/Views/Admin/Index.cshtml";
     int count = 0;
 }
@@ -11,17 +12,15 @@
             <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Öne Çıkan Alan işlemleri</h4>
-                        <br />
-                        <p>Tema bütünlüğünün bozulmaması adına sadece 1 tane eklenebilir.</p>
+                        <h4>Şef Listesi</h4>
                     </div>
                     <div class="card-body">
                         <table class="table">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
+                                    <th scope="col">Şef Adı</th>
                                     <th scope="col">Başlık</th>
-                                    <th scope="col">Alt Başlık</th>
                                     <th scope="col">Açıklama</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
@@ -33,24 +32,16 @@
                                     count++;
                                     <tr>
                                         <th scope="row">@count</th>
+                                        <td>@item.NameSurname</td>
                                         <td>@item.Title</td>
-                                        <td>@item.SubTitle</td>
                                         <td>@item.Description</td>
-                                        <td><a href="/Feature/DeleteFeature/@item.FeatureId" class="btn btn-danger">Sil</a></td>
-                                        <td><a href="/Feature/UpdateFeature/@item.FeatureId" class="btn btn-success">Güncelle</a></td>
+                                        <td><a href="/Chef/DeleteChef/@item.ChefId/" class="btn btn-danger">Sil</a></td>
+                                        <td><a href="/Chef/UpdateChef/@item.ChefId/" class="btn btn-success">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        @if (Model.Count == 1)
-                        {
-                            <a href="#" class="btn btn-info" onclick="return false;">Feature Mevcut</a>
-                        }
-                        else
-                        {
-                            <a href="/Feature/CreateFeature/" class="btn btn-info">Yeni Feature Girişi</a>
-                        }
-
+                        <a href="/Chef/CreateChef/" class="btn btn-info">Yeni Şef Girişi</a>
                     </div>
                 </div>
             </div>
