--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -8,9 +8,18 @@
         <ul class="sidebar-menu">
             <li class="dropdown">
                 <a href="/Default/Index" class="nav-link"><i data-feather="home"></i><span>Siteye Git</span></a>
-                <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
                 <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler</span></a>
                 <a href="/Product/ProductList" class="nav-link"><i data-feather="package"></i><span>Ürünler</span></a>
+                <a href="/Feature/FeatureList" class="nav-link"><i data-feather="cast"></i><span>Öne Çıkanlar</span></a>
+                <a href="/About/AboutList" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda</span></a>
+                <a href="/WhyChooseYummy/WhyChooseYummyList" class="nav-link"><i data-feather="feather"></i><span>Neden Yummy</span></a>
+                <a href="/Testimonial/TestimonialList" class="nav-link"><i data-feather="aperture"></i><span>Müşteri Yorumları</span></a>
+                <a href="/YummyEvents/YummyEventList" class="nav-link"><i data-feather="activity"></i><span>Yummy Etkinlik</span></a>
+                <a href="/Chef/ChefList" class="nav-link"><i data-feather="activity"></i><span>Şefler</span></a>
+                <a href="/Reservation/Reservationlist" class="nav-link"><i data-feather="phone-call"></i><span>Rezervasyonlar</span></a
+
+
+
 
             </li>
         </ul>
