--- a/ApiProjeKampi.WebUı/Views/YummyEvents/YummyEventList.cshtml
+++ b/ApiProjeKampi.WebUı/Views/YummyEvents/YummyEventList.cshtml
@@ -1,6 +1,8 @@
-﻿@model List<ResultFeatureDto>
+﻿﻿
+@model List<ResultYummyEventDto>
+
 @{
-    ViewData["Title"] = "FeatureList";
+    ViewData["Title"] = "YummyEventList";
     Layout = "~/Views/Admin/Index.cshtml";
     int count = 0;
 }
@@ -11,18 +13,16 @@
             <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Öne Çıkan Alan işlemleri</h4>
-                        <br />
-                        <p>Tema bütünlüğünün bozulmaması adına sadece 1 tane eklenebilir.</p>
+                        <h4>Etkinlik Organizasyon Listesi</h4>
                     </div>
                     <div class="card-body">
                         <table class="table">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">Başlık</th>
-                                    <th scope="col">Alt Başlık</th>
-                                    <th scope="col">Açıklama</th>
+                                    <th scope="col">Organizasyon Başlığı</th>
+                                    <th scope="col">Organizasyon Açıklaması</th>
+                                    <th scope="col">Organizasyon Fiyatı</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
                                 </tr>
@@ -34,23 +34,15 @@
                                     <tr>
                                         <th scope="row">@count</th>
                                         <td>@item.Title</td>
-                                        <td>@item.SubTitle</td>
                                         <td>@item.Description</td>
-                                        <td><a href="/Feature/DeleteFeature/@item.FeatureId" class="btn btn-danger">Sil</a></td>
-                                        <td><a href="/Feature/UpdateFeature/@item.FeatureId" class="btn btn-success">Güncelle</a></td>
+                                        <td>@item.Price</td>
+                                        <td><a href="/YummyEvent/DeleteYummyEvent/@item.YummyEventId/" class="btn btn-danger">Sil</a></td>
+                                        <td><a href="/YummyEvent/UpdateYummyEvent/@item.YummyEventId/" class="btn btn-success">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        @if (Model.Count == 1)
-                        {
-                            <a href="#" class="btn btn-info" onclick="return false;">Feature Mevcut</a>
-                        }
-                        else
-                        {
-                            <a href="/Feature/CreateFeature/" class="btn btn-info">Yeni Feature Girişi</a>
-                        }
-
+                        <a href="/YummyEvent/CreateYummyEvent/" class="btn btn-info">Yeni Organizasyon Girişi</a>
                     </div>
                 </div>
             </div>
