--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
@@ -1,269 +1,43 @@
-﻿@model List<ApiProjeKampi.WebApi.Dtos.ProductDtos.ResultProductDto>
+﻿@model List<ApiProjeKampi.WebUı.Dtos.ProductDtos.ResultProductDto>
 
 <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
-    
 
-    <div class="tab-pane fade active show" id="menu-starters">
-
-        <div class="tab-header text-center">
-            <p>Menü</p>
-            <h3>Tüm lezzetler</h3>
-        </div>
-
+    <div class="tab-pane fade active show" id="menu-all">
         <div class="row gy-5">
-          
-            @foreach (var item in Model)
+            @foreach (var product in Model)
             {
                 <div class="col-lg-4 menu-item">
-                    <a href="@item.ImageUrl" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                    <h4>@item.ProductName</h4>
-                    <p class="ingredients">
-                        @item.ProductDescription
-                    </p>
-                    <p class="price">
-                        @($"{item.Price} ₺")
-                    </p>
+                    <a href="@product.ImageUrl" class="glightbox">
+                        <img src="@product.ImageUrl" class="menu-img img-fluid" alt="">
+                    </a>
+                    <h4>@product.ProductName</h4>
+                    <p class="ingredients">@product.ProductDescription</p>
+                    <p class="price">@($"{product.Price} ₺")</p>
                 </div>
-                <!-- Menu Item -->
             }
-
-
-
-        </div></div><!-- End Starter Menu Content -->
-
-    <div class="tab-pane fade" id="menu-breakfast">
-
-        <div class="tab-header text-center">
-            <p>Menu</p>
-            <h3>Breakfast</h3>
         </div>
+    </div>
 
-        <div class="row gy-5">
+    @{
+        var grouped = Model.GroupBy(p => p.CategoryId);
+    }
 
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Magnam Tiste</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $5.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Aut Luia</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $14.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Est Eligendi</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $8.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Laboriosam Direva</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $9.95
-                </p>
-            </div><!-- Menu Item -->
-
+    @foreach (var group in grouped)
+    {
+        <div class="tab-pane fade" id="menu-@group.Key">
+            <div class="row gy-5">
+                @foreach (var product in group)
+                {
+                    <div class="col-lg-4 menu-item">
+                        <a href="@product.ImageUrl" class="glightbox">
+                            <img src="@product.ImageUrl" class="menu-img img-fluid" alt="">
+                        </a>
+                        <h4>@product.ProductName</h4>
+                        <p class="ingredients">@product.ProductDescription</p>
+                        <p class="price">@($"{product.Price} ₺")</p>
+                    </div>
+                }
+            </div>
         </div>
-    </div><!-- End Breakfast Menu Content -->
-
-    <div class="tab-pane fade" id="menu-lunch">
-
-        <div class="tab-header text-center">
-            <p>Menu</p>
-            <h3>Lunch</h3>
-        </div>
-
-        <div class="row gy-5">
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Magnam Tiste</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $5.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Aut Luia</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $14.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Est Eligendi</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $8.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Laboriosam Direva</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $9.95
-                </p>
-            </div><!-- Menu Item -->
-
-        </div>
-    </div><!-- End Lunch Menu Content -->
-
-    <div class="tab-pane fade" id="menu-dinner">
-
-        <div class="tab-header text-center">
-            <p>Menu</p>
-            <h3>Dinner</h3>
-        </div>
-
-        <div class="row gy-5">
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Magnam Tiste</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $5.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Aut Luia</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $14.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Est Eligendi</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $8.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $12.95
-                </p>
-            </div><!-- Menu Item -->
-
-            <div class="col-lg-4 menu-item">
-                <a href="/Yummy/assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Laboriosam Direva</h4>
-                <p class="ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                    $9.95
-                </p>
-            </div><!-- Menu Item -->
-
-        </div>
-    </div><!-- End Dinner Menu Content -->
-
+    }
 </div>
-
