Hakkımızda ve Anasayfa bölümleri Türkçeye çevrildi ve içerik düzenlemesi yapıldı

--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_AboutDashboardComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_AboutDashboardComponentPartial/Default.cshtml
@@ -1,45 +1,41 @@
 ﻿<section id="about" class="about section">
 
-    <!-- Section Title -->
+    <!-- Bölüm Başlığı -->
     <div class="container section-title" data-aos="fade-up">
         <h2>Hakkımızda<br></h2>
-        <p><span>Neler Yapıyoruz?</span> <span class="description-title">Hakkımızda</span></p>
+        <p><span>Neler Yapıyoruz?</span> <span class="description-title">Biz Kimiz?</span></p>
     </div><!-- End Section Title -->
 
     <div class="container">
-
         <div class="row gy-4">
             <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-                <img src="~/Yummy/assets/img/about.jpg" class="img-fluid mb-4" alt="">
+                <img src="/Yummy/assets/img/about.jpg" class="img-fluid mb-4" alt="Restoranımızdan bir kare">
                 <div class="book-a-table">
-                    <h3>Rezarvasyon Yap</h3>
-                    <p>+1 5589 55488 55</p>
+                    <h3>Rezervasyon</h3>
+                    <p>+90 212 123 45 67</p>
                 </div>
             </div>
             <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
                 <div class="content ps-0 ps-lg-5">
                     <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
+                        Geleneksel tarifleri modern dokunuşlarla yeniden yorumluyor, her lokmada unutulmaz bir lezzet deneyimi sunuyoruz.
                     </p>
                     <ul>
-                        <li><i class="bi bi-check-circle-fill"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                        <li><i class="bi bi-check-circle-fill"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                        <li><i class="bi bi-check-circle-fill"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                        <li><i class="bi bi-check-circle-fill"></i> <span>Yerel ve taze malzemelerle hazırlanan özgün menüler.</span></li>
+                        <li><i class="bi bi-check-circle-fill"></i> <span>Misafir memnuniyetini ön planda tutan profesyonel hizmet anlayışı.</span></li>
+                        <li><i class="bi bi-check-circle-fill"></i> <span>Hem göze hem damağa hitap eden şık sunumlarla unutulmaz anlar yaşatıyoruz.</span></li>
                     </ul>
                     <p>
-                        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                        Deneyimli şeflerimiz ve samimi ekibimizle, sizi sadece bir yemek deneyimine değil; aynı zamanda keyifli anılar biriktireceğiniz sıcak bir ortama davet ediyoruz.
                     </p>
 
                     <div class="position-relative mt-4">
-                        <img src="~/Yummy/assets/img/about-2.jpg" class="img-fluid" alt="">
-                        <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+                        <img src="/Yummy/assets/img/about-2.jpg" class="img-fluid" alt="Mutfaktan görüntü">
+                        <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn" title="Tanıtım Videomuzu İzleyin"></a>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
-</section><!-- /About Section -->
+</section>
