--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
@@ -2,37 +2,35 @@
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="~/Yummy/assets/img/logo.png" alt=""> -->
+            <!-- Logo resmini kullanmak istersen aşağıdaki satırı açabilirsin -->
+            <!-- <img src="~/Yummy/assets/img/logo.png" alt="Yummy Logo"> -->
             <h1 class="sitename">Yummy</h1>
             <span>.</span>
         </a>
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a href="#hero" class="active">Ana Sayfa<br></a></li>
+                <li><a href="#hero" class="active">Ana Sayfa</a></li>
                 <li><a href="#about">Hakkımızda</a></li>
                 <li><a href="#menu">Menü</a></li>
                 <li><a href="#events">Etkinlikler</a></li>
                 <li><a href="#chefs">Şefler</a></li>
                 <li><a href="#gallery">Galeri</a></li>
                 <li class="dropdown">
-                    <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                    <a href="#"><span>Daha Fazla</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
-                        <li><a href="#">Dropdown 1</a></li>
+                        <li><a href="#">Hizmetlerimiz</a></li>
+                        <li><a href="#">Blog</a></li>
                         <li class="dropdown">
-                            <a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                            <a href="#"><span>Alt Menü</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                             <ul>
-                                <li><a href="#">Deep Dropdown 1</a></li>
-                                <li><a href="#">Deep Dropdown 2</a></li>
-                                <li><a href="#">Deep Dropdown 3</a></li>
-                                <li><a href="#">Deep Dropdown 4</a></li>
-                                <li><a href="#">Deep Dropdown 5</a></li>
+                                <li><a href="#">Alt Menü 1</a></li>
+                                <li><a href="#">Alt Menü 2</a></li>
+                                <li><a href="#">Alt Menü 3</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Dropdown 2</a></li>
-                        <li><a href="#">Dropdown 3</a></li>
-                        <li><a href="#">Dropdown 4</a></li>
+                        <li><a href="#">Sık Sorulan Sorular</a></li>
+                        <li><a href="#">Kariyer</a></li>
                     </ul>
                 </li>
                 <li><a href="#contact">İletişim</a></li>
@@ -40,7 +38,7 @@
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="#book-a-table">Rezarvasyon</a>
+        <a class="btn-getstarted" href="#book-a-table">Rezervasyon</a>
 
     </div>
 </header>
