mesaj gönderin kısmı eklendi

--- a/ApiProjeKampi.WebUı/Views/Default/Index.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Default/Index.cshtml
@@ -23,6 +23,8 @@
 
         <!-- Etkinlikler Bölümü -->
         @await Component.InvokeAsync("_EventDefaultComponentPartial")
+        
+    
 
         <!-- İstatistikler Bölümü -->
         <section id="stats" class="stats section dark-background">
@@ -132,6 +134,8 @@
             </div>
 
         </section><!-- /Galeri Bölümü -->
+
+        @await Component.InvokeAsync("_ContactDefaultComponentPartial")
         <!-- İletişim / Footer Bölümü -->
         @await Component.InvokeAsync("_FooterDefaultComponentPartial")
 
