--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_FooterDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_FooterDefaultComponentPartial/Default.cshtml
@@ -5,21 +5,19 @@
             <div class="col-lg-3 col-md-6 d-flex">
                 <i class="bi bi-geo-alt icon"></i>
                 <div class="address">
-                    <h4>Address</h4>
-                    <p>A108 Adam Street</p>
+                    <h4>Adres</h4>
+                    <p>Adam Caddesi No:108</p>
                     <p>New York, NY 535022</p>
-                    <p></p>
                 </div>
-
             </div>
 
             <div class="col-lg-3 col-md-6 d-flex">
                 <i class="bi bi-telephone icon"></i>
                 <div>
-                    <h4>Contact</h4>
+                    <h4>İletişim</h4>
                     <p>
-                        <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
-                        <strong>Email:</strong> <span>info@example.com</span><br>
+                        <strong>Telefon:</strong> <span>+1 5589 55488 55</span><br>
+                        <strong>E-posta:</strong> <span>info@example.com</span><br>
                     </p>
                 </div>
             </div>
@@ -27,16 +25,16 @@
             <div class="col-lg-3 col-md-6 d-flex">
                 <i class="bi bi-clock icon"></i>
                 <div>
-                    <h4>Opening Hours</h4>
+                    <h4>Çalışma Saatleri</h4>
                     <p>
-                        <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
-                        <strong>Sunday</strong>: <span>Closed</span>
+                        <strong>Pazartesi - Cumartesi:</strong> <span>11:00 - 23:00</span><br>
+                        <strong>Pazar:</strong> <span>Kapalı</span>
                     </p>
                 </div>
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h4>Follow Us</h4>
+                <h4>Bizi Takip Edin</h4>
                 <div class="social-links d-flex">
                     <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
                     <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -44,30 +42,27 @@
                     <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
-
         </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Yummy</strong> <span>All Rights Reserved</span></p>
+        <p>© <strong class="px-1 sitename">Yummy</strong> Tüm Hakları Saklıdır</p>
         <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you've purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Tasarım: <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
         </div>
     </div>
 
 </footer>
 
-<!-- Scroll Top -->
-<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<!-- Yukarı Kaydır -->
+<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+</a>
 
-<!-- Preloader -->
+<!-- Yükleniyor Animasyonu -->
 <div id="preloader"></div>
 
-<!-- Vendor JS Files -->
+<!-- Vendor JS Dosyaları -->
 <script src="~/Yummy/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/Yummy/assets/vendor/php-email-form/validate.js"></script>
 <script src="~/Yummy/assets/vendor/aos/aos.js"></script>
@@ -75,5 +70,5 @@
 <script src="~/Yummy/assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="~/Yummy/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-<!-- Main JS File -->
+<!-- Ana JS Dosyası -->
 <script src="~/Yummy/assets/js/main.js"></script>
