--- a/ApiProjeKampi.WebUı/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUı/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
@@ -12,8 +12,8 @@
             <ul>
                 <li><a href="#hero" class="active">Ana Sayfa</a></li>
                 <li><a href="#about">Hakkımızda</a></li>
-                <li><a href="#menu">Menü</a></li>
                 <li><a href="#events">Etkinlikler</a></li>
+                <li><a href="#menu">Menü</a></li>
                 <li><a href="#chefs">Şefler</a></li>
                 <li><a href="#gallery">Galeri</a></li>
                 <li class="dropdown">
@@ -33,7 +33,7 @@
                         <li><a href="#">Kariyer</a></li>
                     </ul>
                 </li>
-                <li><a href="#contact">İletişim</a></li>
+                <li><a href="/Contact">İletişim</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
